--- a/html/actividad-1.html
+++ b/html/actividad-1.html
@@ -7,8 +7,7 @@
 <link rel="license" type="text/html" href="https://creativecommons.org/licenses/by-sa/4.0/">
 <title>Actividad 1 | Habilidades Lógico Matemáticas</title>
 <script>document.querySelector("html").classList.add("js");</script><script src="../libs/jquery/jquery.min.js"> </script><script src="../libs/common_i18n.js"> </script><script src="../libs/common.js"> </script><script src="../libs/exe_export.js"> </script><script src="../libs/bootstrap/bootstrap.bundle.min.js"> </script><link rel="stylesheet" href="../libs/bootstrap/bootstrap.min.css">
-<script src="../idevices/word-search/word-search.js"> </script><script src="../idevices/text/text.js"> </script><link rel="stylesheet" href="../idevices/word-search/word-search.css">
-<link rel="stylesheet" href="../idevices/text/text.css">
+<script src="../idevices/word-search/word-search.js"> </script><link rel="stylesheet" href="../idevices/word-search/word-search.css">
 <link rel="stylesheet" href="../content/css/base.css">
 <script src="../theme/style.js"> </script><link rel="stylesheet" href="../theme/style.css">
 <link rel="icon" type="image/x-icon" href="../libs/favicon.ico">
@@ -48,19 +47,6 @@
                 
                 <div class="sopa-bns js-hidden">Su navegador no es compatible con esta herramienta.</div>
                 </div> </div>
-</div></article><article id="20260201031629PSZZCL" class="box"> <header class="box-head no-icon"> <h1 class="box-title">&lt;br&gt;</h1>
-<button class="box-toggle box-toggle-on" title="Ocultar/Mostrar contenido"> <span>Ocultar/Mostrar contenido</span></button></header><div class="box-content"> <div id="20260201031629RTCKUH" class="idevice_node text" data-idevice-path="../idevices/text/" data-idevice-type="text" data-idevice-component-type="json"><div class="exe-text-template"><div class="textIdeviceContent">
-            <div class="exe-text-activity">
-                <div><table border="0" style="width: 100.051%;">
-<tbody>
-<tr>
-<td style="width: 34.9457%;"><br></td>
-<td style="width: 29.9539%;"><br></td>
-<td style="width: 34.9487%;"><a href="../html/actividad-2.html" id="link_3"><img src="../content/resources/20260201031629RTCKUH/mceclip9.png" width="60" height="60" style="display: block; margin-left: auto; margin-right: auto;"></a></td>
-</tr>
-</tbody>
-</table><p class="clearfix"></p></div>
-            </div></div></div></div>
 </div></article>
 </div></main><div class="nav-buttons"> <a href="../html/contenido.html" title="Anterior" class="nav-button nav-button-left"> <span>Anterior</span></a><a href="../html/actividad-2.html" title="Siguiente" class="nav-button nav-button-right"> <span>Siguiente</span></a>
 </div>
